# fjord

./: Cargo.toml
.github/workflows/: ci.yaml
editor/: Cargo.toml
editor/src/: lib.rs  themes.rs
editor/src/themes/: dark_plus.rs  dracula.rs  gruvbox.rs  monokai.rs  nord.rs  seoul.rs  solarized.rs
fj/: Cargo.toml
fj/src/: lexer.rs  lib.rs  main.rs
fjord/: Cargo.toml
fjord/src/: main.rs
fjordstd/: Cargo.toml
fjordstd/src/: lib.rs
foreignfjordfunc-derive/: Cargo.toml
foreignfjordfunc-derive/src/: lib.rs
libfjord/: Cargo.toml
libfjord/src/: eval.rs  expr.rs  ffi.rs  func.rs  ident_name.rs  item.rs  lib.rs  misc.rs  params.rs
libfjord/src/params/: call.rs  def.rs
parser-test/: Cargo.toml
parser-test/src/: main.rs
src/: ast.rs  commands.rs  env.rs  eval.rs  expr.rs  func.rs  ident_name.rs  item.rs  lang.rs  lexer.rs  lib.rs  params.rs  parser.rs  val.rs
src/ast/: eval.rs
src/env/: commands.rs
src/eval/: error.rs
src/lexer/: syntax_kind.rs
src/params/: def.rs
src/parser/: error.rs  expr.rs  item.rs  statement.rs
syntax/: Cargo.toml
syntax-rust/: Cargo.toml
syntax-rust/src/: block.rs  bounds.rs  expr.rs  function_call_param.rs  function_def_param.rs  function_param.rs  function_return_type.rs  generics.rs  ident.rs  item.rs  lib.rs  lifetime.rs  module_name.rs  parser.rs  path.rs  pattern.rs  statement.rs  trait_.rs  ty.rs  ty_ident.rs  ty_name.rs  utils.rs
syntax-rust/src/expr/: character.rs  fn_call.rs  if_.rs  int.rs  macro_invocation.rs  postfix.rs  prefix.rs  string.rs  struct_literal.rs  variable.rs
syntax-rust/src/expr/struct_literal/: named_fields.rs  tuple_fields.rs
syntax-rust/src/generics/: def.rs  usage.rs
syntax-rust/src/item/: fn_def.rs  struct_def.rs  trait_def.rs  type_def.rs  use_decl.rs
syntax-rust/src/item/struct_def/: named_fields.rs  tuple_fields.rs
syntax-rust/src/parser/: bounds.rs  generics.rs  generics_def.rs  generics_use.rs  named_structure_def_fields.rs  named_structure_literal_fields.rs  tuple_structure_def_fields.rs  tuple_structure_literal_fields.rs
syntax/src/: lib.rs
