[package]
name = "fjord"
version = "0.4.6"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library that parses and evaluates Fjord code."
documentation = "https://docs.rs/fjord"
homepage = "https://github.com/arzg/fjord"
repository = "https://github.com/arzg/fjord"

[dependencies]
logos = "0.11"
num_enum = "0.5"
rowan = "0.10"
smol_str = "0.1"
text-size = "1"

[dev-dependencies]
expect-test = "1"
