[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
description = "A library that parses and evaluates Fjord code."
documentation = "https://docs.rs/fjord"
edition = "2018"
homepage = "https://github.com/arzg/fjord"
license = "MIT OR Apache-2.0"
name = "fjord"
repository = "https://github.com/arzg/fjord"
version = "0.4.12"

[dependencies]
is_executable = "0.1"
logos = "0.11"
num_enum = "0.5"
rowan = "0.10"
smol_str = "0.1"
text-size = "1"

[dev-dependencies]
expect-test = "1"
