[package]
name = "editor"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0.17"
foreignfjordfunc-derive = { path = "../foreignfjordfunc-derive" }
libfjord = { path = "../libfjord" }
