[package]
name = "editor"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1"
crossterm = "0.17"
itertools = "0.9"
libfjord = { path = "../libfjord" }
syntax = { path = "../syntax" }
syntax-rust = { path = "../syntax-rust" }
